--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "dotenv": "^17.2.3",
+    "electron-store": "^11.0.2",
     "form-data": "^4.0.5",
     "moment": "^2.30.1",
     "node-fetch": "^3.3.2",
